--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -11,31 +13,22 @@
         tools:context=".MainActivity"
         android:id="@+id/container"/>
 
-    <com.ismaeldivita.chipnavigation.ChipNavigationBar
-        android:id="@+id/navigation"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
-        android:elevation="18dp"
-        android:padding="8dp"
-        android:background="@color/white"
-        app:cnb_animationDuration="100"
-        app:cnb_menuResource="@menu/menu_bottom_navigation"
-        app:cnb_unselectedColor="#000" />
-
-    <!-- com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/navigation"
+    <io.ak1.BubbleTabBar
+        android:id="@+id/bubbleTabBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="@color/blue_grey_700"
-        app:elevation="3dp"
-        app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
-        app:itemHorizontalTranslationEnabled="true"
-        app:itemIconTint="@drawable/color_state_white_2"
-        app:itemTextColor="@drawable/color_state_white_2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:menu="@menu/menu_bottom_navigation" / -->
+        android:background="#FFF"
+        android:elevation="16dp"
+        android:padding="7dp"
+        android:layout_alignParentBottom="true"
+        app:bubbletab_menuResource="@menu/menu_bottom_navigation"
+        app:bubbletab_disabled_icon_color="#064235"
+        app:bubbletab_horizontal_padding="20dp"
+        app:bubbletab_icon_size="20dp"
+        app:bubbletab_title_size="16sp"
+        app:bubbletab_icon_padding="5sp"
+        app:bubbletab_vertical_padding="10dp"
+        app:bubbletab_tab_corner_radius="25dp">
+    </io.ak1.BubbleTabBar>
 
 </RelativeLayout>
