--- a/app/src/main/res/layout/fragment_scenario.xml
+++ b/app/src/main/res/layout/fragment_scenario.xml
@@ -32,8 +32,7 @@
                     android:gravity="center_vertical"
                     android:fontFamily="sans-serif-condensed"
                     android:text="@string/scenario_head"
-                    android:textColor="@color/overlay_dark_90"
-                    android:textSize="24sp"
+                    android:textSize="@dimen/text_caption"
                     android:typeface="normal" />
 
             </LinearLayout>
