--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,23 +1,17 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="button_size">23pt</dimen>
-    <dimen name="button_marging">3dp</dimen>
+    <dimen name="button_margin">3dp</dimen>
+    <dimen name="text_caption">30sp</dimen>
     <dimen name="text_size">25sp</dimen>
     <dimen name="text_size_low">20sp</dimen>
     <dimen name="text_size_lower">15sp</dimen>
 
     <!-- General spacing -->
-    <dimen name="spacing_xsmall">2dp</dimen>
     <dimen name="spacing_small">3dp</dimen>
-    <dimen name="spacing_medium">5dp</dimen>
-    <dimen name="spacing_xmedium">7dp</dimen>
     <dimen name="spacing_middle">10dp</dimen>
     <dimen name="spacing_large">5dp</dimen>
-    <dimen name="spacing_smlarge">18dp</dimen>
-    <dimen name="spacing_mlarge">20dp</dimen>
-    <dimen name="spacing_mxlarge">25dp</dimen>
     <dimen name="spacing_xlarge">35dp</dimen>
-    <dimen name="spacing_xmlarge">40dp</dimen>
     <dimen name="spacing_xxlarge">50dp</dimen>
 
 </resources>
