--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,11 +2,11 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="button_size">23pt</dimen>
     <dimen name="button_margin">3dp</dimen>
-    <dimen name="corner_radius">5dp</dimen>
+    <dimen name="corner_radius">0dp</dimen>
     <dimen name="text_caption">30sp</dimen>
-    <dimen name="text_size">25sp</dimen>
-    <dimen name="text_size_low">20sp</dimen>
-    <dimen name="text_size_lower">15sp</dimen>
+    <dimen name="text_size">10pt</dimen>
+    <dimen name="text_size_low">8pt</dimen>
+    <dimen name="text_size_lower">6pt</dimen>
 
     <!-- General spacing -->
     <dimen name="spacing_small">3dp</dimen>
